--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,22 +1,36 @@
-.header
-{
-    display: inline;
-    font-family: sans-serif;
-}
-
 li a 
 {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
 
 li 
 {
-    
+   float: left;
+}
+
+ul
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+
+li a:hover {
+    background-color: #111;
 }
 
 footer 
 {
+    width:100vw;
+    height:100px;
     background-color:black;
     color:white;
     display: inline;
