--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,10 +3,18 @@ li a
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding:16px;
     text-decoration: none;
 }
 
+.logo
+{
+    list-style-type: none;
+    float:left;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
 
 li 
 {
@@ -29,11 +37,11 @@ li a:hover {
 
 footer 
 {
-    width:100vw;
-    height:100px;
-    background-color:black;
-    color:white;
-    display: inline;
-    padding-top:10px;
-    padding-bottom:10px; 
+    position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
 }
